cncProd/force-app/main/default/objects/CampaignMember/fields/Device_Token__c.field-meta.xml
<CustomField>
    <fullName>Device_Token__c</fullName>
    <formula>Contact.Device__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Token</label>
    <type>Text</type>
</CustomField>