cncProd/force-app/main/default/objects/CampaignMember/fields/Notification_Status__c.field-meta.xml
<CustomField>
    <fullName>Notification_Status__c</fullName>
    <label>Notification Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Push</fullName>
            </value>
            <value>
                <fullName>No device token</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>