cncProd/force-app/main/default/objects/CampaignMember/fields/SMS_Status__c.field-meta.xml
<CustomField>
    <fullName>SMS_Status__c</fullName>
    <label>SMS Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>